Update link in homepage and components

--- a/src/app/pages/components/components.component.html
+++ b/src/app/pages/components/components.component.html
@@ -15,12 +15,12 @@
         <div class="component-title-2">{{class.title}}</div>
       </div>
       <ul class="component-list">
-        <li *ngFor="let component of class.components; let i=index" class="component-list-item">
+        <li *ngFor="let component of class.components; let i=index" class="component-list-item" (click)="routeTo(component.route)">
           <div class="component-list-svg">
             <img src="assets/img/{{component.title}}.svg" alt="{{component.title}}">
           </div>
           <div class="component-item">
-            <div class="component-title-3">{{component.title}}</div>
+            <div class="component-title-3 component-title-link">{{component.title}}</div>
             <div class="component-sub-2">{{component.desc}}</div>
           </div>
         </li>
