--- a/src/app/pages/homepage/homepage.html
+++ b/src/app/pages/homepage/homepage.html
@@ -4,8 +4,8 @@
       <h1>Vizient Components for the Web</h1>
       <p>The system includes the resources to create user interfaces consistent with the Vizient app principles, design language, and best practices. Rather than focusing on pixels, developers can focus on application logic, while designers can focus on user experience, interactions, and flows.</p>
       <div class="button-sec">
-        <button (click)="clickGetStart()" mat-raised-button color="primary">Get Started</button>
-        <button mat-button color="primary">Components</button>
+        <button (click)="routeTo('/documentation/designers')" mat-raised-button color="primary">Get Started</button>
+        <button mat-button color="primary" (click)="routeTo('/components')">Components</button>
       </div>
     </div>
     <div class="svg-item">
