--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
       <span class="tab-item">COMPONENTS</span>
     </a>
     <a mat-tab-link
-      routerLink="/documentation"
+      routerLink="/documentation/designers"
       routerLinkActive 
       #rla4="routerLinkActive"
       [active]="rla4.isActive">
