--- a/libs/components/breadcrumb/viz-breadcrumb.component.html
+++ b/libs/components/breadcrumb/viz-breadcrumb.component.html
@@ -1,8 +1,7 @@
 <div class="path-list">
-  <ng-container *ngFor="let bc of breadCrumbList; let index = index;">
-    <span class="path-link" *ngIf="!!bc.clickable" [routerLink]="bc.url">{{bc.label}}</span>
-    <span class="path-normal" *ngIf="!bc.clickable">{{bc.label}}</span>
-
-    <mat-icon class="navigate_next font-size-14" *ngIf="index < breadCrumbList.length - 1">navigate_next</mat-icon>
+  <ng-container *ngFor="let bc of breadcrumbs; let index = index;">
+    <span class="path-link" [routerLink]="bc.url">{{bc.label}}</span>
+    <!-- <span class="path-normal" *ngIf="!bc.clickable">{{bc.label}}</span> -->
+    <mat-icon class="navigate_next font-size-14" *ngIf="index < breadcrumbs.length - 1">navigate_next</mat-icon>
   </ng-container>
 </div>
