Fix Bug : Slide Toggle --> Please update to "Slide Toggle" instead of Slider

--- a/src/assets/documents/components/slidetoggle.html
+++ b/src/assets/documents/components/slidetoggle.html
@@ -6,7 +6,7 @@
     <span class="docs-markdown-h3" id="contents"><span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
-    Slider Toggle  </div>
+    Slide Toggle  </div>
   <div class="doc-desc-1">
     Slider Toggles are used for binary actions. They are commonly used for “On/Off” situations.  </div>
   <div class="doc-divider">
