Fix Bug : Toolbar --> padding on the sides should be 24px

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -603,6 +603,11 @@ td.mat-cell,
   }
 }
 
+//toolbar
+.mat-toolbar.mat-toolbar-single-row {
+  padding: 0px 24px;
+}
+
 //side nav
 .viz-sidenav {
   width: 300px;
