Fix Bug : Header --> Incorrect width (should be 736px) Please see reference link

--- a/src/assets/examples/header-basic/header-basic.component.html
+++ b/src/assets/examples/header-basic/header-basic.component.html
@@ -1,1 +1,3 @@
-<viz-header title="Application" brandLink="/" userName="Stan Lee" type="primary"></viz-header>
+<div class="example-container">
+  <viz-header title="Application" brandLink="/" userName="Stan Lee" type="primary"></viz-header>
+</div>
