--- a/libs/components/footer/viz-footer.component.scss
+++ b/libs/components/footer/viz-footer.component.scss
@@ -74,6 +74,7 @@
             display: inline-flex;
             vertical-align: middle;
             text-decoration: none;
+            font-weight: 300;
             color: #FF4E00;
           }
         }       
