--- a/src/assets/examples/sidenav-basic/sidenav-basic.component.html
+++ b/src/assets/examples/sidenav-basic/sidenav-basic.component.html
@@ -11,8 +11,9 @@
         [routerLink]="subNav.value" 
         routerLinkActive
         #rla="routerLinkActive" [class.active]="rla.isActive">
-        <mat-icon class="example-icon">{{subNav.icon}}</mat-icon>
+        <mat-icon class="viz-sidenav-group-item-icon">{{subNav.icon}}</mat-icon>
         {{subNav.name}}
+        <mat-icon class="viz-sidenav-group-item-icon-close">close</mat-icon>
       </div>
     </div>
   </div>
