--- a/src/assets/documents/components/sidenav.html
+++ b/src/assets/documents/components/sidenav.html
@@ -92,10 +92,10 @@
 
   <div style="margin-bottom:24px">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:500px">
-      <img src="assets/img/doc/sidenav-divide-do.png" alt="">
+      <img src="assets/img/doc/sidenav-divide-do.png" alt="" style="padding-top:93px">
     </div>
     <div class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16" style="height:500px">
-      <img src="assets/img/doc/sidenav-divide-dont.png" alt="">
+      <img src="assets/img/doc/sidenav-divide-dont.png" alt="" style="padding-top:93px">
     </div>
   </div>
 
@@ -105,10 +105,10 @@
 
   <div style="margin-bottom:24px">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:500px">
-      <img src="assets/img/doc/sidenav-icon-do.png" alt="">
+      <img src="assets/img/doc/sidenav-icon-do.png" alt="" style="padding-top:93px">
     </div>
     <div class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16" style="height:500px">
-      <img src="assets/img/doc/sidenav-icon-dont.png" alt="">
+      <img src="assets/img/doc/sidenav-icon-dont.png" alt="" style="padding-top:93px">
     </div>
   </div>
 
@@ -120,7 +120,7 @@
 
 
   <div class="docs-usage-spec docs-usage-center" style="height:520px">
-    <img src="assets/img/doc/sidenav-spec.png" alt="">
+    <img src="assets/img/doc/sidenav-spec.png" alt="" style="padding-top:65px">
   </div>
 
 
