--- a/src/assets/examples/expansion-panel-table/expansion-panel-table.component.css
+++ b/src/assets/examples/expansion-panel-table/expansion-panel-table.component.css
@@ -66,5 +66,9 @@ td {
 }
 
 .expand-icon {
-  color: #9f9f9f;
+  color: #c3c3c3;
+  margin-right: 12px;
+  font-size: 24px;
+  height: 24px;
+  width: 24px;
 }
