--- a/libs/style.scss
+++ b/libs/style.scss
@@ -578,7 +578,8 @@ td.mat-cell,
     color: #696969;
     line-height: 18px;
     font-weight: 300;
-
+    height: 48px;
+    box-sizing: border-box;
     &:first-child {
       padding-left: 40px;
     }
