--- a/libs/style.css
+++ b/libs/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /**
  * Applies styles for users in high contrast mode. Note that this only applies
  * to Microsoft browsers. Chrome can be included by checking for the `html[hc]`
@@ -3091,6 +3090,15 @@ td.mat-cell,
   font-weight: 300;
   font-size: 14px; }
 
+.mat-selection-list .mat-list-item .mat-list-item-content .mat-ripple-element {
+  background-color: rgba(127, 94, 186, 0.16); }
+
+.mat-selection-list .mat-list-option:hover {
+  background-color: rgba(127, 94, 186, 0.04); }
+
+.mat-selection-list .mat-list-option.mat-list-item-focus {
+  background-color: rgba(127, 94, 186, 0.12); }
+
 @media screen and (max-width: 375px) {
   .vizient-snackbar .mat-simple-snackbar {
     flex-direction: column; }
@@ -3285,7 +3293,9 @@ td.mat-cell,
     font-size: 14px;
     color: #696969;
     line-height: 18px;
-    font-weight: 300; }
+    font-weight: 300;
+    height: 48px;
+    box-sizing: border-box; }
     .viz-table-cell:first-child {
       padding-left: 40px; }
     .viz-table-cell:last-child {
@@ -3299,6 +3309,9 @@ td.mat-cell,
     .viz-table-expand-row:last-child {
       box-shadow: inset 0 1px 0 0 rgba(215, 221, 229, 0.5), inset 0 -1px 2px 0 rgba(0, 0, 0, 0.05); }
 
+.mat-toolbar.mat-toolbar-single-row {
+  padding: 0px 24px; }
+
 .viz-sidenav {
   width: 300px;
   text-align: left; }
@@ -3311,7 +3324,7 @@ td.mat-cell,
     color: #000000;
     border-bottom: 1px solid #f1f1f1; }
   .viz-sidenav-group {
-    padding: 24px;
+    padding: 24px 0px;
     border-bottom: 1px solid #f1f1f1; }
   .viz-sidenav-group-header {
     /* My Orders: */
@@ -3322,8 +3335,11 @@ td.mat-cell,
     line-height: 15px;
     font-weight: 700;
     text-transform: uppercase;
-    margin-bottom: 8px; }
+    margin-bottom: 8px;
+    margin-left: 24px; }
   .viz-sidenav-group-item {
+    margin: 4px 8px;
+    padding: 0px 16px;
     display: flex;
     align-items: center;
     height: 48px;
@@ -3334,7 +3350,28 @@ td.mat-cell,
     line-height: 48px;
     outline: none;
     cursor: pointer;
-    /* ▶︎ CONTENT Copy: */ }
+    position: relative; }
+    .viz-sidenav-group-item-icon {
+      color: #c3c3c3;
+      margin-right: 16px; }
+    .viz-sidenav-group-item-icon-close {
+      position: absolute;
+      right: 16px;
+      display: none !important; }
+    .viz-sidenav-group-item:hover {
+      color: #7f5eba;
+      background-color: rgba(127, 94, 186, 0.08);
+      border-radius: 2px; }
+      .viz-sidenav-group-item:hover mat-icon {
+        color: #7f5eba; }
+      .viz-sidenav-group-item:hover .viz-sidenav-group-item-icon-close {
+        display: block !important; }
+    .viz-sidenav-group-item.active {
+      color: #7f5eba;
+      background-color: rgba(127, 94, 186, 0.08);
+      border-radius: 2px; }
+      .viz-sidenav-group-item.active .mat-icon {
+        color: #7f5eba; }
 
 .viz-h1 {
   /* Headline H1: */
