--- a/src/assets/examples/expansion-panel-basic/expansion-panel-basic.component.html
+++ b/src/assets/examples/expansion-panel-basic/expansion-panel-basic.component.html
@@ -1,4 +1,4 @@
-<viz-expansion-panel>
+<!-- <viz-expansion-panel>
   <viz-expansion-panel-header>
     <mat-panel-title>
       Personal data
@@ -34,4 +34,4 @@
     <input matInput placeholder="Age">
   </mat-form-field>
 </viz-expansion-panel>
-
+ -->
