--- a/src/assets/examples/progress-spinner-basic/progress-spinner-basic.component.html
+++ b/src/assets/examples/progress-spinner-basic/progress-spinner-basic.component.html
@@ -1,3 +1,3 @@
 <div class="spinner-wrap">
-    <mat-spinner color="accent"></mat-spinner>
+    <mat-spinner color="accent" diameter="44" strokeWidth="4"></mat-spinner>
 </div>
