--- a/src/assets/documents/components/nodata.html
+++ b/src/assets/documents/components/nodata.html
@@ -114,7 +114,7 @@
   </div>
 
 
-  <div class="docs-usage-spec docs-usage-center" style="height:280px">
+  <div class="docs-usage-spec docs-usage-center" style="height:280px;left: 43px;">
     <img src="assets/img/doc/nodata-spec.png" alt="">
   </div>
 
