--- a/src/app/pages/homepage/homepage.scss
+++ b/src/app/pages/homepage/homepage.scss
@@ -98,6 +98,7 @@
           font-weight: 200;
           margin-top: 20px;
           margin-bottom: 10px;
+          color: #000000;
         }
         p {
           margin-top: 0;
