Fix Bug : Global: Header --> Active underline thickness should be 4px

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,6 +26,9 @@
             color: #212121;
           }
         }
+        .mat-ink-bar {
+          height: 4px;
+        }
       }
     }
     .github-link {
