Fix Bug : Paginator	 --> incorrect font size and color

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -499,13 +499,19 @@ td.mat-cell,
   .mat-paginator-page-size-label {
     margin-left: 0px;
     margin-right: 24px;
+    font-size: 13px;
   }
   .mat-paginator-page-size-select {
     margin-left: 0px;
     margin-right: 0px;
+    .mat-select-value-text{
+      font-size: 14px;
+      color: #000000;
+    }
   }
   .mat-paginator-range-label {
     margin-left: 32px;
+    font-size: 13px;
   }
   .mat-form-field-underline {
     display: none;
