Bug Fix : Paginator	 --> accordion color should turn back to #9F9F9F after click

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -508,6 +508,9 @@ td.mat-cell,
       font-size: 14px;
       color: #000000;
     }
+    .mat-select-arrow{
+      color: #9f9f9f !important;
+    }
   }
   .mat-paginator-range-label {
     margin-left: 32px;
