--- a/libs/style.scss
+++ b/libs/style.scss
@@ -300,6 +300,10 @@ td.mat-cell,
 }
 
 //snackbar style
+.vizient-snackbar.mat-snack-bar-container {
+  padding-left: 16px;
+  padding-right: 8px;
+}
 @media screen and (max-width: 375px) {
   .vizient-snackbar .mat-simple-snackbar {
     flex-direction: column;
