Fix Bug : Stepper --> Usage & Content guidelines images should be bigger and touch the container edge. Please see reference link

--- a/src/assets/documents/components/stepper.html
+++ b/src/assets/documents/components/stepper.html
@@ -90,10 +90,10 @@
 
   <div style="margin-bottom:24px">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:360px">
-      <img src="assets/img/doc/stepper-do.png" alt="">
+      <img src="assets/img/doc/stepper-do.png" alt="" style="max-width:none;left:-240px;top:30px">
     </div>
     <div class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16" style="height:360px">
-      <img src="assets/img/doc/stepper-dont.png" alt="">
+      <img src="assets/img/doc/stepper-dont.png" alt="" style="max-width:none;left:-240px;top:30px">
     </div>
   </div>
 
