--- a/libs/style.scss
+++ b/libs/style.scss
@@ -508,11 +508,11 @@ td.mat-cell,
   .mat-paginator-page-size-select {
     margin-left: 0px;
     margin-right: 0px;
-    .mat-select-value-text{
+    .mat-select-value-text {
       font-size: 14px;
       color: #000000;
     }
-    .mat-select-arrow{
+    .mat-select-arrow {
       color: #9f9f9f !important;
     }
   }
@@ -562,11 +562,16 @@ td.mat-cell,
     padding: 16px;
     /* Available Contracts: */
     font-family: Soleto;
+    height: 48px;
+    box-sizing: border-box;
     font-size: 10px;
     color: #9f9f9f;
-    letter-spacing: 1.5px;
+
     line-height: 15px;
     font-weight: 700;
+    .mat-sort-header-button {
+      letter-spacing: 1.5px;
+    }
     .mat-sort-header-sorted {
       color: #212121;
       .mat-sort-header-arrow {
