Fix Bug : Global: Usage & Content guidelines spacing --> Usage & Content guidelines link

--- a/src/assets/documents/components/badge.html
+++ b/src/assets/documents/components/badge.html
@@ -106,7 +106,7 @@
   </div>
   <div class="doc-desc-2">
     Badge should not block the over elements it support. Bagde should always stay on the right of the main elements.  </div>
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/badge-block-do.png" alt="">
     </div>
@@ -117,7 +117,7 @@
   <div class="doc-desc-2">
     Do not add shadow to the badge.
   </div>
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/badge-shadow-do.png" alt="">
     </div>
@@ -128,7 +128,7 @@
   <div class="doc-desc-2">
     Do not use the same color as the main elements.
   </div>
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/badge-color-do.png" alt="">
     </div>
