--- a/src/assets/documents/components/button.html
+++ b/src/assets/documents/components/button.html
@@ -96,7 +96,7 @@
     Buttons should be clear and predictable—data analyst should be able to anticipate what will happen when they click a button.
     Never deceive them by mislabeling a button.
   </div>
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/button-predicable-do.png" alt="">
     </div>
@@ -107,7 +107,7 @@
   <div class="doc-desc-2">
     Don’t wrap text. For maximum legibility, a text label should remain on a single line.
   </div>
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/button-singleline-do.png" alt="">
     </div>
