--- a/src/assets/documents/components/checkbox.html
+++ b/src/assets/documents/components/checkbox.html
@@ -94,7 +94,7 @@
     Start with a capital letter
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/checkbox-capital-ok.png" alt="">
     </div>
@@ -108,7 +108,7 @@
     Avoid using button toggles for a list of options
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/checkbox-list-do.png" alt="">
     </div>
