--- a/src/assets/documents/components/chip.html
+++ b/src/assets/documents/components/chip.html
@@ -168,7 +168,7 @@
   <div class="doc-desc-2">
     Choice chips shouldn’t present only a single option.
   </div>
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
       <img width="304" height="32" src="assets/img/doc/chip-list-do.png" alt="">
     </div>
@@ -180,7 +180,7 @@
     Horizontal placement of choice chips. Choice chips can wrap to a new row. However, using two or more rows of choice chips
     can make each chip harder to scan.
   </div>
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
       <img width="432" height="32" src="assets/img/doc/chip-horizatal-do.png" alt="">
     </div>
