--- a/src/assets/documents/components/datepicker.html
+++ b/src/assets/documents/components/datepicker.html
@@ -88,7 +88,7 @@
   <div class="doc-desc-2">
     Always disable the date that user cannot interact with.
   </div>
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:291px">
       <img src="assets/img/doc/datepicker-disable-do.png" alt="">
     </div>
