--- a/src/assets/documents/components/dialog.html
+++ b/src/assets/documents/components/dialog.html
@@ -121,7 +121,7 @@
     Don’t use dialog titles that pose an ambiguous question.
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:712px">
       <img src="assets/img/doc/dialog-title-do.png" alt="">
     </div>
@@ -135,7 +135,7 @@
     placed to the left of confirming actions.
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:712px">
       <img src="assets/img/doc/dialog-confirm-do.png" alt="">
     </div>
