--- a/src/assets/documents/components/expansionpanel.html
+++ b/src/assets/documents/components/expansionpanel.html
@@ -93,7 +93,7 @@
   <div class="doc-desc-2">
     As for expanded rows, use grey background colof with top and bottom shadows to distinguish from main rows.
   </div>
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do">
       <div style="width: 100%; height: 352px" class="docs-usage-center">
         <img  class="expansionpanel-usage" src="assets/img/doc/expansionpanel-do.png" alt="">
