--- a/src/assets/documents/components/feedbackindicator.html
+++ b/src/assets/documents/components/feedbackindicator.html
@@ -95,7 +95,7 @@
     Body content should be concise, keep content to 1 to 2 sentences where possible, clarify the benefit of the main task
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/feedbackindicator-do.png" alt="">
     </div>
