--- a/src/assets/documents/components/formfield.html
+++ b/src/assets/documents/components/formfield.html
@@ -87,7 +87,7 @@
   <div class="doc-desc-2">
     Label text should be short, clear, and fully visible. It shouldn’t be truncated.
   </div>
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/formfield-pic-1.png" alt="">
     </div>
@@ -98,7 +98,7 @@
   <div class="doc-desc-2">
     Label text shouldn’t take up multiple lines.
   </div>
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/formfield-pic-3.png" alt="">
     </div>
