--- a/src/assets/documents/components/header.html
+++ b/src/assets/documents/components/header.html
@@ -134,7 +134,7 @@
     If title text is long, use a prominent app bar and wrap the title to two lines. Don’t truncate text, hiding the full title
     may cause misunderstanding. Don’t shrink text to fit on a single line.
   </div>
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/header-do.png" alt="">
     </div>
