--- a/src/assets/documents/components/icon.html
+++ b/src/assets/documents/components/icon.html
@@ -89,7 +89,7 @@
   <div class="doc-desc-2">
     Make icons graphic and bold. Don’t use delicate, thin stroke weights.
   </div>
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
       <img  src="assets/img/doc/icon-pic-1.png" alt="">
     </div>
@@ -100,7 +100,7 @@
   <div class="doc-desc-2">
     Use geometric, consistent shapes. Don’t use gestural or loose organic shapes.
   </div>
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
       <img  src="assets/img/doc/icon-pic-3.png" alt="">
     </div>
@@ -111,7 +111,7 @@
   <div class="doc-desc-2">
     Use consistent stroke weights and squared stroke terminals. Don’t use inconsistent stroke weights or rounded stroke terminals.
   </div>
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
       <img  src="assets/img/doc/icon-pic-5.png" alt="">
     </div>
