--- a/src/assets/documents/components/list.html
+++ b/src/assets/documents/components/list.html
@@ -93,7 +93,7 @@
     All items in a list should be consistent continuously.
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:304px">
       <img src="assets/img/doc/list-do.png" alt="">
     </div>
