--- a/src/assets/documents/components/login.html
+++ b/src/assets/documents/components/login.html
@@ -88,7 +88,7 @@
     Label text should be short, clear, and fully visible. It shouldn’t be truncated.
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:456px">
       <img src="assets/img/doc/login-clear-do.png" alt="">
     </div>
@@ -101,7 +101,7 @@
   <div class="doc-desc-2">
     Disable confirming actions (1) until all the fields are filled. </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:456px">
       <img src="assets/img/doc/login-status-do.png" alt="">
     </div>
