--- a/src/assets/documents/components/menu.html
+++ b/src/assets/documents/components/menu.html
@@ -145,7 +145,7 @@
     and which item is available to be selected.
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:272px">
       <img src="assets/img/doc/menu-do.png" alt="">
     </div>
