--- a/src/assets/documents/components/nodata.html
+++ b/src/assets/documents/components/nodata.html
@@ -97,7 +97,7 @@
     Be clearly and accurately state the reason why there is no data.
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:326px">
       <img src="assets/img/doc/nodata-do.png" alt="">
     </div>
