--- a/src/assets/documents/components/paginator.html
+++ b/src/assets/documents/components/paginator.html
@@ -205,7 +205,7 @@
       Dropdown: Use the app’s primary color to indicate an active selection.
     </div>
 
-    <div style="margin-bottom:24px">
+    <div class="docs-guideline-group">
       <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:272px">
         <img src="assets/img/doc/paginator-primary-active-do.png" alt="">
       </div>
@@ -218,7 +218,7 @@
       Don’t break paginator to two lines
     </div>
 
-    <div style="margin-bottom:24px">
+    <div class="docs-guideline-group">
       <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
         <img src="assets/img/doc/paginator-line-do.png" alt="">
       </div>
