--- a/src/assets/documents/components/progressbar.html
+++ b/src/assets/documents/components/progressbar.html
@@ -119,7 +119,7 @@
     The track is a fixed width rule, with set boundaries for the indicator to travel along. Track has the same color as the indicator
     but with 24% opacity. </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/progressbar-do.png" alt="">
     </div>
