--- a/src/assets/documents/components/progressspinner.html
+++ b/src/assets/documents/components/progressspinner.html
@@ -126,7 +126,7 @@
     < 5 seconds) requiring user attention. Don’t apply progress
       indicators to every button in your app. They can unnecessarily interrupt the user’s task.</div>
 
-      <div style="margin-bottom:24px">
+      <div class="docs-guideline-group">
         <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:489px">
           <img src="assets/img/doc/progressspinner-do.png" alt="">
         </div>
