--- a/src/assets/documents/components/radio.html
+++ b/src/assets/documents/components/radio.html
@@ -90,7 +90,7 @@
     Use radio buttons when only one option can be selected from a list.
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:200px">
       <img src="assets/img/doc/radio-do.png" alt="">
     </div>
