--- a/src/assets/documents/components/select.html
+++ b/src/assets/documents/components/select.html
@@ -94,7 +94,7 @@
     Select menu should be short, clear, and fully visible. It shouldn’t be truncated.
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/select-do.png" alt="">
     </div>
