--- a/src/assets/documents/components/sidenav.html
+++ b/src/assets/documents/components/sidenav.html
@@ -90,7 +90,7 @@
     Use full-width dividers to separate groups of destinations. Don’t use dividers to separate individual destinations.
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:500px">
       <img src="assets/img/doc/sidenav-divide-do.png" alt="" style="padding-top:93px">
     </div>
@@ -103,7 +103,7 @@
     Don’t apply icons to some destinations and not others. Icons should be used for all destinations, or none.
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:500px">
       <img src="assets/img/doc/sidenav-icon-do.png" alt="" style="padding-top:93px">
     </div>
