--- a/src/assets/documents/components/slider.html
+++ b/src/assets/documents/components/slider.html
@@ -90,7 +90,7 @@
   <div class="doc-desc-2">
     Do not use sliders for ranges that are too large (1-1000) or too small (1-3) </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/slider-do.png" alt="">
     </div>
