--- a/src/assets/documents/components/slidetoggle.html
+++ b/src/assets/documents/components/slidetoggle.html
@@ -81,7 +81,7 @@
   <div class="doc-desc-2">
     Do not alternate the main color of the toggle  </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:200px">
       <img src="assets/img/doc/slidertoggle-do.png" alt="">
     </div>
