--- a/src/assets/documents/components/snackbar.html
+++ b/src/assets/documents/components/snackbar.html
@@ -136,7 +136,7 @@
     should have only a single line of text.
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/snack-pc-do.png" alt="">
     </div>
@@ -149,7 +149,7 @@
       Don’t place icons in snackbars. If your message needs an icon, consider using an alert.
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-dont docs-usage-w100 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/snack-icon-dont.png" alt="">
     </div>
@@ -160,7 +160,7 @@
       The text label shouldn’t share the same color as the text button.
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-dont docs-usage-w100 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/snack-color-same-dont.png" alt="">
     </div>
@@ -171,7 +171,7 @@
       Don’t use a filled or elevated button in a snackbar, as it draws too much attention.
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-dont docs-usage-w100 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/snack-primary-color-dont.png" alt="">
     </div>
