--- a/src/assets/documents/components/stepper.html
+++ b/src/assets/documents/components/stepper.html
@@ -88,7 +88,7 @@
   <div class="doc-desc-2">
     Don’t embed steppers within steppers or use multiple steppers on one page.</div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:360px">
       <img src="assets/img/doc/stepper-do.png" alt="" style="max-width:none;left:-240px;top:30px">
     </div>
