--- a/src/assets/documents/components/table.html
+++ b/src/assets/documents/components/table.html
@@ -145,7 +145,7 @@
   <div class="doc-desc-2">
     As for expanded rows, use grey background color with top and bottom shadows to distinguish from main rows. </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:448px">
       <img src="assets/img/doc/table-do.png" alt="">
     </div>
