--- a/src/assets/documents/components/tabs.html
+++ b/src/assets/documents/components/tabs.html
@@ -140,7 +140,7 @@
     Don’t use simple tabs within a wide column, even when there are just a few items.
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:282px">
       <img src="assets/img/doc/tabs-do.png" alt="">
     </div>
@@ -153,7 +153,7 @@
     Don’t use simple tabs within a wide column, even when there are just a few items.
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:282px">
       <img src="assets/img/doc/tabs-scroll-do.png" alt="">
     </div>
