--- a/src/assets/documents/components/toolbar.html
+++ b/src/assets/documents/components/toolbar.html
@@ -88,7 +88,7 @@
     Don’t wrap text. For maximum legibility, a text label should remain on a single line.
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/toolbar-single-do.png" alt="">
     </div>
@@ -101,7 +101,7 @@
   <div class="doc-desc-2">
     Don’t place imagery in toolbar that makes the toolbar’s text and icons illegible.  </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:160px">
       <img src="assets/img/doc/toolbar-img-do.png" alt="">
     </div>
