--- a/src/assets/documents/components/tooltip.html
+++ b/src/assets/documents/components/tooltip.html
@@ -191,7 +191,7 @@
       Don’t display shadows on tooltips
     </div>
 
-    <div style="margin-bottom:24px">
+    <div class="docs-guideline-group">
       <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
         <img src="assets/img/doc/tooltip-shadow-do.png" alt="">
       </div>
@@ -204,7 +204,7 @@
       Don’t display rich information and imagery on tooltips
     </div>
 
-    <div style="margin-bottom:24px">
+    <div class="docs-guideline-group">
       <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
         <img src="assets/img/doc/tooltip-image-do.png" alt="">
       </div>
