--- a/src/assets/documents/components/tree.html
+++ b/src/assets/documents/components/tree.html
@@ -91,7 +91,7 @@
     Start with a capital letter
   </div>
 
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:312px">
       <img src="assets/img/doc/tree-do.png" alt="">
     </div>
