--- a/src/assets/documents/components/bottomsheet.html
+++ b/src/assets/documents/components/bottomsheet.html
@@ -104,7 +104,7 @@
       can make it hard to see and allow it to be confused for other components, such as snackbars.
     </div>
 
-    <div style="margin-bottom:24px">
+    <div class="docs-guideline-group">
       <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:509px">
         <img src="assets/img/doc/bottomsheet-bottom-do.png" alt="">
       </div>
@@ -119,7 +119,7 @@
       the screen.
     </div>
 
-    <div style="margin-bottom:24px">
+    <div class="docs-guideline-group">
       <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:509px">
         <img src="assets/img/doc/bottomsheet-scrim-do.png" alt="">
       </div>
