--- a/src/assets/documents/components/card.html
+++ b/src/assets/documents/components/card.html
@@ -113,7 +113,7 @@
   </div>
   <div class="doc-desc-2">
       On desktop and mobile, cards can have a resting elevation of 1dp. They elevate to 8dp on hover.</div>
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:537px">
       <img src="assets/img/doc/card-do.png" alt="">
     </div>
