--- a/src/assets/documents/components/headerfooter.html
+++ b/src/assets/documents/components/headerfooter.html
@@ -133,7 +133,7 @@
   <div class="doc-desc-2">
       If title text is long, use a prominent app bar and wrap the title to two lines. Don’t truncate text, hiding the full title may cause misunderstanding. Don’t shrink text to fit on a single line.
   </div>
-  <div style="margin-bottom:24px">
+  <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:272px">
       <img src="assets/img/doc/header-footer-do.png" alt="">
     </div>
