--- a/src/app/shared/example-viewer/example-viewer.html
+++ b/src/app/shared/example-viewer/example-viewer.html
@@ -8,7 +8,8 @@
     </button> -->
 
 
-    <mat-icon [ngClass]="{'active': platform == item }" *ngFor="let item of ['desktop_mac','tablet_mac','phone_iphone']; let i=index" (click)="platform = item;">{{item}}</mat-icon>
+    <mat-icon [ngClass]="{'active': platform == item }" *ngFor="let item of ['desktop_mac','tablet_mac','phone_iphone']; let i=index"
+      (click)="platform = item;">{{item}}</mat-icon>
 
 
 
@@ -16,27 +17,22 @@
 
 
 
-  <div class="docs-example-viewer-body" #exampleViewBody [ngClass]="getViewportClass()" >
+  <div class="docs-example-viewer-body" #exampleViewBody [ngClass]="getViewportClass()">
     <!-- <ng-container *ngComponentOutlet="exampleData.component"></ng-container> -->
     <ng-template [cdkPortalOutlet]="selectedPortal"></ng-template>
   </div>
 
   <div class="docs-example-viewer-source" [@.disabled]="true">
-    <mat-tab-group >
+    <mat-tab-group>
       <!-- TODO(jelbourn): don't hard-code the html + ts + css structure -->
-      <mat-tab *ngFor="let extension of ['HTML', 'TS']" [label]="extension === 'TS' ? 'AngularJS' : extension" >
+      <mat-tab *ngFor="let extension of ['HTML', 'TS']" [label]="extension === 'TS' ? 'AngularJS' : extension">
+        <button mat-icon-button type="button" class="docs-example-source-copy" [class.docs-example-source-copy-active]="copyFocus"
+          title="Copy example source" aria-label="Copy example source to clipboard" matTooltip="Copy code" (click)="copySource(viewer.textContent)"
+          (mouseover)="copyFocus = true" (mouseleave)="copyFocus = false">
+          <img *ngIf="!copyFocus" src="assets/img/copy-icon.svg" alt="">
+          <img *ngIf="copyFocus" src="assets/img/copy-icon-active.svg" alt="">
+        </button>
         <div class="docs-example-source-wrapper">
-          
-          <button mat-icon-button type="button" class="docs-example-source-copy" [class.docs-example-source-copy-active]="copyFocus" title="Copy example source" aria-label="Copy example source to clipboard"
-            matTooltip="Copy code"
-            (click)="copySource(viewer.textContent)"
-            (mouseover)="copyFocus = true"
-            (mouseleave)="copyFocus = false">
-            <img *ngIf="!copyFocus" src="assets/img/copy-icon.svg" alt="">
-            <img *ngIf="copyFocus" src="assets/img/copy-icon-active.svg" alt="">
-          </button>
-
-
           <pre class="docs-example-source"><doc-viewer
               #viewer [documentUrl]="exampleFileUrl(extension)"></doc-viewer></pre>
         </div>
