--- a/src/assets/examples/expansion-panel-table/expansion-panel-table.component.html
+++ b/src/assets/examples/expansion-panel-table/expansion-panel-table.component.html
@@ -3,7 +3,9 @@
     <div class="viz-table-row">
       <div class="viz-table-cell w70 example-first-col" vizShowExpand #test>
         {{dessert.contract}}</div>
-      <div class="viz-table-cell w30">{{dessert.type}}</div>
+      <div class="viz-table-cell w30">
+        <div class="example-cell">{{dessert.type}}</div>
+      </div>
     </div>
     <div class="viz-table-row" [vizExpand]="test.isExpanded" style="overflow:hidden">
       <div class="viz-table">
