Fix Bug : Expansion Panel --> divider line color should be D7DDE5 opacity 50%

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -298,7 +298,9 @@ td.mat-cell,
     }
   }
 }
-
+.mat-divider {
+  border-top-color: rgba(215, 221, 229, 0.5) !important;
+}
 //snackbar style
 .vizient-snackbar.mat-snack-bar-container {
   padding-left: 16px;
