Fix Bug : No data --> Design Specs container is out of grid

--- a/src/assets/documents/components/nodata.html
+++ b/src/assets/documents/components/nodata.html
@@ -114,8 +114,8 @@
   </div>
 
 
-  <div class="docs-usage-spec docs-usage-center" style="height:280px;left: 43px;">
-    <img src="assets/img/doc/nodata-spec.png" alt="">
+  <div class="docs-usage-spec docs-usage-center" style="height:280px;">
+    <img src="assets/img/doc/nodata-spec.png" alt="" width="290px" height="214px" style="left: 75px">
   </div>
 
 
