Fix Bug : Dialog --> "example: incorrect font size and spacing. Please see reference link
Code already existed in MDA site, see ""Add New Group"" under Member dropdown / Groups / Add Groups: http://vizient-demo.interactivelabs.com/dashboard/process"

--- a/libs/components/tree/viz-tree.component.scss
+++ b/libs/components/tree/viz-tree.component.scss
@@ -21,7 +21,7 @@
   .viz-tree-cell-node {
     display: flex;
     align-items: center;
-    // margin-bottom: 10px;
+    margin-bottom: 16px;
     ::ng-deep {
       &.mat-icon {
         @include md-icon-size(24px);
