--- a/src/assets/examples/tree-basic/tree-basic.component.html
+++ b/src/assets/examples/tree-basic/tree-basic.component.html
@@ -1,7 +1,8 @@
 <div class="example-container">
   <viz-tree [tree]="tree">
     <ng-container *VizTreeLeafDef="let node">
-      <button mat-icon-button disabled></button>
+      <!-- <button mat-icon-button disabled></button> -->
+      <mat-icon></mat-icon>
       <mat-checkbox [checked]="descendantsAllSelected(node)" [indeterminate]="descendantsPartiallySelected(node)" (change)="toggle(node)">{{node.name}}</mat-checkbox>
     </ng-container>
 
@@ -9,11 +10,15 @@
       <!-- <mat-icon (click)="node.isExpanded = !node.isExpanded">
         {{node.isExpanded ? 'arrow_drop_down' : 'arrow_drop_up'}}
       </mat-icon> -->
-      <button mat-icon-button (click)="node.isExpanded = !node.isExpanded" [attr.aria-label]="'toggle ' + node.name" matTreeNodeToggle>
+      <!-- <button mat-icon-button (click)="node.isExpanded = !node.isExpanded" [attr.aria-label]="'toggle ' + node.name" matTreeNodeToggle>
         <mat-icon class="mat-icon-rtl-mirror">
           {{node.isExpanded ? 'arrow_drop_up' : 'arrow_drop_down'}}
         </mat-icon>
-      </button>
+      </button> -->
+
+      <mat-icon (click)="node.isExpanded = !node.isExpanded"> {{node.isExpanded ? 'arrow_drop_down' : 'arrow_drop_up'}}</mat-icon>
+
+
       <mat-checkbox [checked]="descendantsAllSelected(node)" [indeterminate]="descendantsPartiallySelected(node)" (change)="toggle(node)">{{node.name}}</mat-checkbox>
     </ng-container>
   </viz-tree>
