Fix Bug : Badge --> "Text with Badge" and the badge should be on 1 baseline. Please see reference link

--- a/src/assets/examples/badge-basic/badge-basic.component.html
+++ b/src/assets/examples/badge-basic/badge-basic.component.html
@@ -1,2 +1,2 @@
-<span matBadge="1" matBadgeOverlap="false" matBadgeColor="accent">Text with a badge</span>
+<span matBadge="1" matBadgeOverlap="false" matBadgeColor="accent" class="viz-text-badge">Text with a badge</span>
 <mat-icon matBadge="1,000" matBadgeColor="warn" matBadgePosition="above after">folder</mat-icon>
